examples/refinements/nonboolean_refinement.an

foo (x: i32 & 3) = ()

// args: --check
// expected stderr:
// error:   expected bool, found int
